# Educational-Information-Management-System

./: CMakeLists.txt  Course.cpp  Course.hpp  Teacher.cpp  Teacher.hpp  User.cpp  User.hpp  Utility.cpp  Utility.hpp  main.cpp  makefile
data/: _courseList.txt  _teacherList.txt  _users.txt
